# forest-3.0

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ci_schedule.patch  config.yaml  environment.yml  pip_3.11.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: run_from_config.py
src/forest/: __init__.py  cli.py  config.py  results.py
src/forest/backtest/: __init__.py  engine.py  errors.py  grid.py  risk.py  trace.py  tradebook.py
src/forest/broker/: __init__.py  adapter.py
src/forest/core/: indicators.py
src/forest/dashboard/: app.py
src/forest/data/: __init__.py  csv_source.py
src/forest/live/: __init__.py  router.py
src/forest/ml/: infer.py
src/forest/strategy/: base.py  ema_cross.py  features.py  ml_runner.py
src/forest/utils/: __init__.py  log.py  timeframes.py  validate.py
tests/: test_broker_adapter.py  test_config.py  test_costs.py  test_dashboard.py  test_data_csv.py  test_engine.py  test_engine_integration.py  test_grid.py  test_grid_cache.py  test_grid_export.py  test_indicators.py  test_ml.py  test_risk.py  test_router.py  test_strategy_interface.py  test_timeframes.py  test_trace.py  test_tradebook.py  test_version.py
