[tool.poetry]
name = "forest"
version = "0.1.0"
description = "FOREST 3.0 trading system"
authors = ["TwojeImię"]
readme = "README.md"
packages = [{ include = "forest", from = "src" }]
python = "^3.11"                     # ← teraz klasyczny ASCII‑caret

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=2.3.2,<3.0.0"
pandas = ">=2.3.1,<3.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-select = ["I"]