[tool.poetry]
name = "forest"
version = "0.1.0"
description = "FOREST 3.0 trading system"
authors = ["Dariusz Dubis"]
readme = "README.md"
packages = [{ include = "forest", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.24,<1.27"
pandas = ">=2.3.1,<3.0.0"
lightgbm = "^4.6.0"
pandas-ta   = { version = "0.3.14b0", allow-prereleases = true }
structlog = "^25.4.0"
rich = "^14.1.0"
streamlit = "^1.35.0"
plotly     = "^5.22.0"
tqdm = "^4.66.4"
joblib = "^1.5.1"
onnxruntime = {version = "==1.18.0", optional = true}
scikit-learn = {version = "^1.4", optional = true}
skl2onnx = {version = "^1.16", optional = true}

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]

[tool.poetry.scripts]
forest-dashboard = "forest.dashboard.app:main"

[tool.poetry.extras]
ml = ["onnxruntime", "scikit-learn", "skl2onnx"]


